name input z-index fix

--- a/src/app/home/find-summoner-input/find-summoner-input.component.css
+++ b/src/app/home/find-summoner-input/find-summoner-input.component.css
@@ -49,6 +49,7 @@
   border-bottom-left-radius: .25em;
   border-bottom-right-radius: .25em;
   overflow-y: auto;
+  z-index: 10;
 }
 
 .dropdown-container::-webkit-scrollbar {
